public/css/main.css
/*icons*/
@font-face {
  font-family: 'icomoon';
  src:  url('/fonts/icomoon.eot?ftag0k');
  src:  url('/fonts/icomoon.eot?ftag0k#iefix') format('embedded-opentype'),
  url('/fonts/icomoon.ttf?ftag0k') format('truetype'),
  url('/fonts/icomoon.woff?ftag0k') format('woff'),
  url('/fonts/icomoon.svg?ftag0k#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}
[class^="dcricon-"], [class*=" dcricon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.dcricon-sun-fill:before {
  content: "\e901";
}
.dcricon-sun-stroke:before {
  content: "\e902";
}
.dcricon-decred:before {
  content: "\e900";
}

/*fonts*/
@font-face {
  font-family: 'source-sans-pro-v9-latin-regular';
  src:  url('/fonts/source-sans-pro-v9-latin-regular.eot');
  src:  url('/fonts/source-sans-pro-v9-latin-regular.eot#iefix') format('embedded-opentype'),
  url('/fonts/source-sans-pro-v9-latin-regular.woff') format('woff'),
  url('/fonts/source-sans-pro-v9-latin-regular.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'inconsolata-v15-latin-regular';
  src:  url('/fonts/inconsolata-v15-latin-regular.eot');
  src:  url('/fonts/inconsolata-v15-latin-regular.eot#iefix') format('embedded-opentype'),
  url('/fonts/inconsolata-v15-latin-regular.woff') format('woff'),
  url('/fonts/inconsolata-v15-latin-regular.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}

/*elements*/
html {
  color: #5f5f5f;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased !important;
  -moz-font-smoothing: antialiased !important;
  text-rendering: optimizelegibility !important;
  padding-top: 35px;
}
.mono {
  font-family: 'inconsolata-v15-latin-regular';
}
body {
  font-family: 'source-sans-pro-v9-latin-regular';
  padding-bottom: 2.1rem;
}
a {
  color: #3575f6
}
h4 {
  margin-top: 10px;
}

/*dark theme*/
#sun-toggle {
  padding: 5px;
}
body.darkBG {
  background: #3B3F45;
  color: #fdfdfd;
}
body.darkBG a {
  color: #94ffca;
}
body.darkBG .table thead th {
  vertical-align: bottom;
}
body.darkBG .top-nav,
body.darkBG .navbar-fixed-bottom {
  background: #292929;
}
body.darkBG .top-nav a,
body.darkBG .navbar-fixed-bottom a {
  color: #fff;
}

/*utils*/
.anchor {
  position: relative;
  top: -33px;
}
.hidden {
  display: none;
}
.nowrap {
  white-space: nowrap;
}
.break-word {
  word-wrap: break-word;
  word-break: break-word;
}
.fs11 {
  font-size: 11px !important;
}
.fs12 {
  font-size: 12px !important;
}
.fs13 {
  font-size: 13px !important;
}
.fs15 {
  font-size: 15px !important;
}
.fs18 {
  font-size: 18px !important;
}
.fs28 {
  font-size: 28px !important;
}
.no-underline,
.no-underline:hover {
  text-decoration: none;
}
.trailing-zeroes {
  opacity: .3
}
.op60 {
  opacity: .7
}
.lh1rem {
  line-height: 1rem;
}
.h2rem {
  height: 2rem;
}
.h3rem {
  height: 3rem;
}
.w80 {
  width: 80px;
}
.vam {
  vertical-align: middle;
}
.p03rem0 {
  padding: .3rem 0;
}

/*nav*/
.top-nav,
.navbar-fixed-bottom {
  position: fixed;
  background: #3B3F45;
  z-index: 1;
}
.top-nav {
  width: 100%;
  top: 0;
}
.navbar-fixed-bottom {
  bottom: 0;
  width: 100%;
  color: silver;
  font-size: 12px;
  line-height: 22px;
}
.top-nav a {
  color: white;
}
.top-nav .dcricon-decred {
  font-size: 22px;
}
.top-search {
  height: 30px;
  margin: 2px 0 !important;
}
.navbar-fixed-bottom {
  position: fixed;
  bottom: 0;
  width: 100%;
  font-size: 12px;
  line-height: 22px;
}
.navbar-fixed-bottom .nav-item {
  color: silver;
  padding: 0 6px;
  position: relative;
}

/*table*/
.table-centered-1rem td {
  line-height: 1rem;
  vertical-align: middle;
}
.table th {
  font-size: 14px;
}
.table td {
  font-size: 14px;
  vertical-align: middle;
}
.table thead th {
  border-bottom: none;
}
.table thead {
}
.table thead th {
  padding: 0.36rem .5rem;
}
.table thead tr {
  background: rgba(0, 0, 0, 0.06) !important;
}
.table td, .table th {
  border: none;
  padding: .25rem .5rem;
}
.table.striped tr:nth-child(odd) {
  background: rgba(255, 255, 255, 0.02);
}
.table.striped tr:nth-child(even) {
  background: rgba(0, 0, 0, 0.02);
}
.table-sm td {
  padding: .1rem .5rem;
  height: 25px;
}
.table.flush-left tr td:first-child {
  padding-left: 0px;
}
.table-mono-cells td {
  font-family: 'inconsolata-v15-latin-regular';
  font-size: 14px;
}
.table .height {
  font-size: 18px;
}

/*content*/
.dcr-total .dcr {
  font-size: 28px;
}
.dcr-total .total-text {
  line-height: 11px;
  opacity: 0.8;
  font-weight: bold;
  letter-spacing: 0px;
}
.dcr-total .total-text .d-block {
  letter-spacing: 1px;
  font-weight: bold;
  font-size: 13px;
}

.hash {
  font-size: 14px;
  font-family: 'inconsolata-v15-latin-regular', monospace;
  display: inline-block;
  word-wrap: break-word;
  transition: .133s transform;
}
.hash.collapse {
  font-size: 12px;
  display: inline-block;
  width: 197px;
}

.outpoint {
  font-family: 'inconsolata-v15-latin-regular', monospace;
  display: inline-block;
  word-wrap: break-word;
  transition: .133s transform;
}
.outpoint.collapse {
  font-size: 12px;
  display: inline-block;
  width: 206px;
}

/*resemble voting.decred.org*/
.highlight-text {
  height: 20px;
  margin-top: 3px;
  padding: 2px 4px 3px;
  border-radius: 3px;
  line-height: 20px;
  font-weight: 600;
  background-color: rgba(105, 211, 245, .3);
}
.agenda-voting-overview-option-dot {
  position: relative;
  top: 3px;
  width: 15px;
  height: 15px;
  margin-right: 6px;
  float: left;
  border-radius: 50%;
}
.agenda-voting-overview-option-dot._abstain {
  background-color: rgba(0, 0, 0, 0.5);
}
.agenda-voting-overview-option-dot._yes {
  background-color: #2ed6a1;
}
.agenda-voting-overview-option-dot._no {
  background-color: #2971ff;
}

/*responsive*/
@media only screen and (max-width: 992px)  {
  .container {
    max-width: 100% !important;
  }
}
@media only screen and (max-width: 940px)  {
  .hash.collapse {
    width: 142px;
  }
}
@media only screen and (max-width: 768px)  {
  .hash.collapse {
    width: 197px;
  }
  .table {
    margin-bottom: 0;
    width: 100%;
  }
  .sm-w151 {
    width: 151px;
  }
}
@media only screen and (max-width: 630px)  {
  .table .hash {
    font-size: 12px;
    width: 197px;
  }
}

@media only screen and (max-width: 576px)  {
  .xs-w91 {
    width: 91px;
  }
}

